force-app/main/default/objects/Activity/fields/cloudtalk__CallDispositionAndType__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__CallDispositionAndType__c</fullName>
    <description>Compound field from call disposition and call type</description>
    <label>Call disposition and type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>