force-app/main/default/objects/Activity/fields/cloudtalk__CallEndDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__CallEndDateAndTime__c</fullName>
    <description>Date and time when the call was ended.</description>
    <label>Call end date and time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>