force-app/main/default/objects/Activity/fields/cloudtalk__CallHour__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__CallHour__c</fullName>
    <formula>VALUE( MID( TEXT( cloudtalk__CallDateAndTime__c ), 12, 2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>