force-app/main/default/objects/Activity/fields/cloudtalk__CallStartDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__CallStartDateAndTime__c</fullName>
    <description>Date and time when call was started</description>
    <label>Call start date and time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>