force-app/main/default/objects/Activity/fields/cloudtalk__ForwardedToLine__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__ForwardedToLine__c</fullName>
    <description>Phone number on which the call was forwarded.</description>
    <label>Forwarded to line</label>
    <type>Phone</type>
</CustomField>