force-app/main/default/objects/Activity/fields/cloudtalk__InternalPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__InternalPhoneNumber__c</fullName>
    <description>CloudTalk number on which was a call made</description>
    <label>Internal phone number</label>
    <type>Phone</type>
</CustomField>