force-app/main/default/objects/Activity/fields/cloudtalk__TotalCallDurationInSeconds__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__TotalCallDurationInSeconds__c</fullName>
    <description>Total call duration in seconds.</description>
    <label>Total call duration in seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>