force-app/main/default/objects/Activity/fields/cloudtalk__WaitingTimeInSeconds__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__WaitingTimeInSeconds__c</fullName>
    <description>Time in seconds a customer waiting until a call is answered</description>
    <label>Waiting time in seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>