force-app/main/default/objects/Activity/fields/ResultadoChamada__c.field-meta.xml
<CustomField>
    <fullName>ResultadoChamada__c</fullName>
    <description>Registra o resultado da chamada realizada</description>
    <label>Resultado da chamada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem resposta</fullName>
            </value>
            <value>
                <fullName>Deixou correio de voz</fullName>
            </value>
            <value>
                <fullName>Conectado</fullName>
            </value>
            <value>
                <fullName>Não interessado</fullName>
            </value>
            <value>
                <fullName>Número errado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>